--- a/admin_persian/static/admin_persian/css/parastoo.css
+++ b/admin_persian/static/admin_persian/css/parastoo.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: parastoo;
     src: url("../fonts/parastoo/Parastoo.eot") format('eot');
@@ -9,6 +8,9 @@
     font-style: normal;
 }
 
-* {
+body,
+button,
+input,
+textarea {
     font-family: parastoo;
 }
