--- a/admin_persian/static/admin_persian/css/sahel.css
+++ b/admin_persian/static/admin_persian/css/sahel.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: sahel;
     src: url("../fonts/sahel/Sahel.eot") format('eot');
@@ -8,6 +7,9 @@
     font-style: normal;
 }
 
-* {
+body,
+button,
+input,
+textarea {
     font-family: sahel;
 }
